part2/e02/manifests/back.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoproject-back-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoproject-back
  template:
    metadata:
      labels:
        app: todoproject-back
    spec:
      volumes:
        - name: project-volume
          persistentVolumeClaim:
            claimName: project-pv-claim
      containers:
        - name: todoproject-back
          image: vhmk/back:2.0.3
          volumeMounts:
          - name: project-volume
            mountPath: /app/files
