part2/e02/manifests/back.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoproject-back-svc
spec:
  type: ClusterIP
  selector:
    app: todoproject-back
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8001
