part2/e02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoproject-front-svc
spec:
  type: ClusterIP
  selector:
    app: todoproject-front
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
